@@ -83,9 +83,12 @@ public class Vala.CodeGenerator {
 				instance = new CCodeUnaryExpression (CCodeUnaryOperator.ADDRESS_OF, instance);
 			}
 
-			var instance_target_type = new TypeReference ();
-			instance_target_type.data_type = (DataType) base_method.parent_symbol;
-			instance = get_implicit_cast_expression (instance, instance_expression_type, instance_target_type);
+			// parent_symbol may be null for late bound methods
+			if (base_method.parent_symbol != null) {
+				var instance_target_type = new TypeReference ();
+				instance_target_type.data_type = (DataType) base_method.parent_symbol;
+				instance = get_implicit_cast_expression (instance, instance_expression_type, instance_target_type);
+			}
 
 			if (!m.instance_last) {
 				ccall.add_argument (instance);
